# spaCEinvaders

.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Interfaz/: .gitignore  CMakeLists.txt  main.c  socket.c
Interfaz/Headers/: constantes.h  enemigo.h  jugador.h  misil.h  muro.h
Interfaz/Sources/: enemigo.c  jugador.c  misil.c  muro.c
Servidor/: .gitignore
Servidor/src/EnemiesPackage/: Crab.java  Enemie.java  Octopus.java  Squid.java
Servidor/src/Factory/: AbstractFactory.java  EnemieFactory.java  FactoryProvider.java  Main.java
Servidor/src/Game/: Conector.java  Game.java  Main.java  Player.java  Shield.java
Servidor/src/Sockets/: Conector.java  Parser.java  Sala.java  Serializar.java  Server.java
sockets/untitled/src/sockets/: Main.java  Server.java
sockets/untitled9/: CMakeLists.txt  main.c  socket.h
